Fixing so that content, headingline, hamburger and overlay don't move on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@
 .imageLinkRight {
 	position: relative;
 	top: 2px;
-	margin-right: 20px;
+	margin-right: 3px;
 	height: 30px;
 	border:none;
 }
